--- a/Frontend/login.css
+++ b/Frontend/login.css
@@ -139,8 +139,15 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0 3px;
-    width: 100px;
+    width: 40px;
     height: 40px;
+    
+}
+.social-icons :hover{
+    background-color: #bcbcbc; 
+    color: #e0e0ff; 
+    transform: scale(1.05);
+    transition: all 0.2s ease;
 }
 
 .toggle-container{
@@ -151,17 +158,17 @@ body{
     height: 100%;
     overflow: hidden;
     transition: all 0.6s ease-in-out;
-    border-radius: 150px 0 0 100px;
+    border-radius: 140px 0 0 100px;
     z-index: 1000;
 }
 
 .container.active .toggle-container{
     transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;
+    border-radius: 0 140px 100px 0;
 }
 
 .toggle{
-    background-color: #512da8;
+    background-color: #1a1a9d;
     height: 100%;
     background: linear-gradient(to right, #3b3bba, #1a1a9d);
     color: #fff;
@@ -192,6 +199,12 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
+
+.toggle-panel.toggle-right h1,
+.toggle-panel.toggle-right p {
+    text-align: center;
+}
+
 .toggle-left{
     transform: translateX(-200%);
 }
@@ -207,4 +220,10 @@ body{
 
 .container.active .toggle-right{
     transform: translateX(200%);
+}
+.container button:hover {
+    background-color: #3333cc; 
+    color: #e0e0ff; 
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
