--- a/Frontend/login.css
+++ b/Frontend/login.css
@@ -168,9 +168,8 @@ body{
 }
 
 .toggle{
-    background-color: #1a1a9d;
+    background-color: #1e293b;
     height: 100%;
-    background: linear-gradient(to right, #3b3bba, #1a1a9d);
     color: #fff;
     position: relative;
     left: -100%;
