--- a/Frontend/Mahasiswa/assets/css/styleMahasiswa.css
+++ b/Frontend/Mahasiswa/assets/css/styleMahasiswa.css
@@ -49,7 +49,7 @@ img{
 }
 
 body{
-    background: #f1f3f2;
+    background: #fefefe;
     height: auto;
     min-height: 100%;
 }
@@ -59,226 +59,13 @@ body{
     padding-bottom: 0.5px;
 }
 
-.top-container .nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 20px 14px;
-    border-bottom: 2px solid #1e293b;
-}
-
-.top-container .nav .logo{
-    display: flex;
-    align-items: center;
-    gap: 6px;
-}
-
-.top-container .nav .logo i{
-    color: #f1f3f2;
-    font-size: 24px;
-}
-
-.top-container .nav .logo a{
-    font-size: 16px;
-}
-
-.top-container .nav .nav-links{
-    display: flex;
-    gap: 20px;
-}
-
-.top-container .nav .nav-links a{
-    color: #ccc;
-    transition: all 0.3s ease;
-}
-
-.top-container .nav .nav-links a:hover{
-    color: #fff;
-}
-
-.top-container .nav .right-section{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.top-container .nav .right-section > i{
-    color: #f1f3f2;
-    background: #1e293b;
-    padding: 12px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.top-container .nav .right-section .profile{
-    display: flex;
-    align-items: center;
-    background: #1e293b;
-    padding: 0 10px;
-    border-radius: 50px;
-    gap: 10px;
-}
-
-.top-container .nav .right-section .profile .info{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.top-container .nav .right-section .profile .info img{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    border: 1px solid #f1f3f2;
-}
-
-.top-container .nav .right-section .profile .info a{
-    font-size: 13px;
-}
-
-.top-container .nav .right-section .profile .info p{
-    font-size: 13px;
-    color: #ccc;
-}
-
-.top-container .nav .right-section .profile > i{
-    color: #f1f3f2;
-    font-size: 22px;
-    cursor: pointer;
-}
-
-.top-container .status{
-    padding: 20px 20px 10px;
-}
-
-.top-container .status .header{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.top-container .status .header h4{
-    color: #f1f3f2;
-    font-weight: 500;
-}
-
-.top-container .status .header h4#big{
-    flex: 3;
-}
-
-.top-container .status .header h4#small{
-    flex: 1;
-    padding-left: 90px;
-}
-
-.top-container .status .items-list{
-    display: flex;
-    align-items: center;
-    gap: 14px;
-}
-
-.top-container .status .items-list .item{
-    background: #1e293b;
-    width: 25%;
-    padding: 20px;
-    border-radius: 18px;
-}
-
-.top-container .status .items-list .item:nth-child(2){
-    background: #1e293b;
-}
-
-.top-container .status .items-list .item:nth-child(3){
-    background: #1e293b;
-}
-
-.top-container .status .items-list .item:nth-child(4){
-    background: #031224;
-    padding: 10px;
-}
-
-.top-container .status .items-list .item .info{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-
-.top-container .status .items-list .item .info h5{
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #ccc;
-}
-
-.top-container .status .items-list .item .info p{
-    font-size: 12px;
-    font-weight: 500;
-    color: #ccc;
-}
-
-.top-container .status .items-list .item .info > i{
-    font-size: 20px;
-    padding: 10px;
-    background: #031224;
-    color: #f1f3f2;
-    border-radius: 50%;
-}
-
-.top-container .status .items-list .item .progress{
-    position: relative;
-    height: 10px;
-    background: #838383;
-    border-radius: 10px;
-}
-
-.top-container .status .items-list .item .progress .bar{
-    width: 92%;
-    height: 10px;
-    background: #ccc;
-    border-radius: 10px;
-}
-
-.top-container .status .items-list .item .progress::before{
-    content: "92%";
-    position: absolute;
-    top: -40px;
-    right: 0;
-    font-size: 22px;
-    font-weight: 600;
-}
-
-.top-container .status .items-list .item:nth-child(2) .progress{
-    background: #838383;
-}
-
-.top-container .status .items-list .item:nth-child(2) .progress .bar{
-    width: 65%;
-}
-
-.top-container .status .items-list .item:nth-child(2) .progress::before{
-    content: "65%";
-}
-
-
-.top-container .status .items-list .item:nth-child(3) .progress{
-    background: #838383;
-}
-
-.top-container .status .items-list .item:nth-child(3) .progress .bar{
-    width: 80%;
-}
-
-.top-container .status .items-list .item:nth-child(3) .progress::before{
-    content: "80%";
-}
+/*FOOTER SECTION */
 
 footer{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px;
+    justify-content: center;
+    padding: 7px;
     gap: 2px;
 
 }
@@ -309,365 +96,3 @@ footer .copyright p{
 footer .copyright{
     width: 100%;
 }
-
-
-.dropdown {
-    position:relative;
-    bottom: 2.5px;
-    
-}
-
-
-
-.dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #1e293b;
-    border-end-start-radius: 8px;
-    border-end-end-radius: 8px;
-    display: none;
-    flex-direction: column;
-    gap: 10px;
-    padding: 15px; 
-    height: 100px;
-    min-width: 100px; 
-    max-width: 300px; 
-    padding: 10px;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.dropdown-menu a {
-    color: #000;
-    padding-top: 20%;
-}
-
-
-.dropdown:hover .dropdown-menu,
-.dropdown.active .dropdown-menu {
-    display: flex;
-    opacity: 1;
-    visibility: visible;
-}
-
-.bottom-container{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    padding: 30px;
-    
-}
-
-.dashboard {
-    display: grid;
-    grid-template-columns: 2fr 5fr 8fr; 
-    grid-gap: 20px;
-    margin: 30px;
-}
-
-header{
-    padding: 0 80px;
-    height: calc(100vh - 80px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-header .left{
-    width: 700px;
-}
-
-header .left h1{
-    font-size: 60px;
-}
-
-header .left h1 span{
-    color: #1e293b;
-}
-
-header .left p{
-    margin: 40px 0;
-    color: #666;
-}
-
-header .left a{
-    display: flex;
-    align-items: center;
-    background: #031224;
-    width: 200px;
-    padding: 8px;
-    border-radius: 60px;
-}
-
-#download-icon {
-    color: rgb(25, 25, 25); 
-}
-
-header .left a i{
-    background-color: #fff;
-    font-size: 24px;
-    border-radius: 50%;
-    padding: 8px;
-}
-
-header .left a span{
-    color: #fff;
-    margin-left: 10px;
-}
-
-header img {
-    width: 700px;
-    position: relative;
-  
-}
-
-h2.separator{
-    padding: 0 80px;
-    font-size: 40px;
-    margin-top: 40px;
-}
-
-.sell-nft{
-    padding: 0 80px;
-    margin: 50px 0 80px;
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-}
-
-.sell-nft .item
-{
-    padding: 20px;
-    background: #ffffff;
-    border-radius: 18px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-}
-
-.sell-nft .item:hover,
-.nft-shop .nft-list .item:hover,
-.sellers .item:hover{
-    box-shadow: none;
-}
-
-.sell-nft .item .header{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.sell-nft .item .header i{
-    font-size: 40px;
-    
-}
-
-.sell-nft .item .header h5{
-    font-size: 17px;
-}
-
-.sell-nft .item p{
-    margin-top: 10px;
-    padding: 0 4px;
-}
-
-.sell-nft-2{
-    padding: 0 80px;
-    margin: 50px 0 80px;
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    margin-top: -50px;
-}
-
-.sell-nft-2 .item
-{
-    padding: 20px;
-    background: #fff;
-    border-radius: 18px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-}
-
-.sell-nft-2 .item:hover,
-.nft-shop .nft-list .item:hover,
-.sellers .item:hover{
-    box-shadow: none;
-}
-
-.sell-nft-2 .item .header{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.sell-nft-2 .item .header i{
-    font-size: 40px;
-}
-
-.sell-nft-2 .item .header h5{
-    font-size: 17px;
-}
-
-.sell-nft-2 .item p{
-    margin-top: 10px;
-    padding: 0 4px;
-}
-
-.services .header,
-.video-sec .header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 60px 80px 0;
-}
-
-.services .header h3,
-.video-sec .header h3{
-    color: #031224;
-    font-size: 56px;
-    text-transform: uppercase;
-    width: 60%;
-}
-
-.services .service-items{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    padding: 80px;
-    padding-bottom: 40px;
-}
-
-.services .service-items .item{
-    background: #ffffff;
-    padding: 20px;
-    border-radius: 40px;
-    width: 25%;
-}
-
-.services .service-items .item .title{
-    display: flex;
-    align-items: center;
-    background: #ffffff;
-    padding: 5px 20px 5px 5px;
-    gap: 10px;
-    width: fit-content;
-    border-radius: 50px;
-    margin-bottom: 30px;
-}
-
-.services .service-items .item .title .gradient{
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-}
-
-
-
-.services .service-items .item:nth-child(1) .title .gradient{
-    background-image: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
-}
-
-.services .service-items .item:nth-child(2) .title .gradient{
-    background-image: linear-gradient(to top, #4fb576 0%, #44c489 30%, #28a9ae 46%, #28a2b7 59%, #4c7788 71%, #6c4f63 86%, #432c39 100%);
-}
-
-.services .service-items .item:nth-child(3) .title .gradient {
-    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
-}
-
-.services .service-items .item:nth-child(4) .title .gradient {
-    background-image: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
-}
-
-.services .service-items .item .desc h5{
-    text-transform: uppercase;
-    color: #050505;
-    font-size: 36px;
-    margin-bottom: 10px;
-}
-
-.services .service-items .item.active{
-    background: #031224;
-}
-
-.services .service-items .item.active .title{
-    background: #031224;
-}
-
-.services .service-items .item.active .desc h5{
-    color: #f4f0f0;
-}
-
-.services .service-items .item.active .desc p{
-    color: #f4f0f0;
-}
-
-.showcase{
-    padding: 40px 80px;
-    margin-top: 60px;
-    text-align: center;
-}
-
-.text-sec p {
-    font-size: 1rem;
-    color: #666;
-    margin-bottom: 30px;
-}
-.showcase h3{
-    color: #031224;
-    font-size: 56px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.showcase .text-sec{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    margin-bottom: 20px;
-}
-
-.showcase .text-sec p{
-    width: 50%;
-    text-align: justify;
-}
-
-.showcase .text-sec .images,
-.showcase .image-sec{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.showcase .text-sec .images img,
-.showcase .image-sec img{
-    width: 256px;
-    border-radius: 40px;
-    border: 2px solid #c5c5c5;
-}
-
-.showcase .images .image-container .name{
-    bottom: 10px;
-    left: 50%;
-    width: 100%;
-    padding: 5px;
-    text-align: center;
-    font-size: 1rem;
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
